# journal-starter

./: .dockerignore  .gitignore  Dockerfile  prometheus.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.gemini/: settings.json
.github/skills/preflight-check/: SKILL.md
.github/workflows/: build-push.yml  ci.yml  deploy.yml
api/: main.py
api/routers/: journal_router.py
api/services/: llm_service.py
infra/: main.tf  providers.tf  variables.tf
k8s/: deployment.yaml  secrets.yaml.example  service.yaml
tests/: test_api.py
